--- a/app/src/main/res/layout/chatting_item_msg_text_left.xml
+++ b/app/src/main/res/layout/chatting_item_msg_text_left.xml
@@ -50,16 +50,22 @@
             android:id="@+id/tv_chatcontent"
             android:layout_width="150dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="15dp"
-            android:text="textview"
-            android:textColor="@color/TittleColor"
             android:layout_gravity="center_vertical"
-            android:gravity="center_vertical"
+            android:layout_marginLeft="15dp"
             android:background="@mipmap/dialogleft"
-            android:paddingLeft="15dp"
-            android:textSize="@dimen/TittleTextSize"
-            />
-
+            android:drawableLeft="@drawable/info_voice"
+            android:gravity="center_vertical|right"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="15''"
+            android:textColor="@color/TittleColor"
+            android:textSize="@dimen/TittleTextSize" />
+        <ImageView
+            android:layout_width="5dp"
+            android:layout_height="5dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/corner_rec_bg_blue_press" />
     </LinearLayout>
     <TextView
         android:id="@+id/tv_username"
@@ -67,6 +73,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@id/iv_userhead"
-        android:layout_toLeftOf="@id/tv_chatcontent" />
+        android:layout_below="@id/iv_userhead" />
 </LinearLayout>
