--- a/app/src/main/res/layout/chat_group_setting.xml
+++ b/app/src/main/res/layout/chat_group_setting.xml
@@ -19,7 +19,7 @@
             android:layout_height="30dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/selector_btn_back"
+            android:background="@drawable/back_white"
             android:paddingLeft="10dp"
             android:textColor="#ffffff"
             android:textSize="16sp"/>
