--- a/app/src/main/res/layout/personal_address.xml
+++ b/app/src/main/res/layout/personal_address.xml
@@ -11,18 +11,29 @@
         android:layout_width="fill_parent"
         android:layout_height="55dp"
         android:background="@color/PrimaryColor"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
-        <Button
+        <LinearLayout
             android:id="@+id/btn_back"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:background="@drawable/selector_btn_back"
-            android:paddingLeft="10dp"
-            android:textColor="#ffffff"
-            android:textSize="16sp"/>
+            android:gravity="center"
+            android:onClick="setting">
+
+            <Button
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_centerVertical="true"
+                android:background="@drawable/back_white"
+                android:paddingLeft="10dp"
+                android:textColor="#ffffff"
+                android:textSize="16sp"/>
+        </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
