--- a/app/src/main/res/layout/page_02.xml
+++ b/app/src/main/res/layout/page_02.xml
@@ -33,14 +33,16 @@
             android:id="@+id/friend_search_bar"
             android:layout_width="300dp"
             android:layout_height="35dp"
-            android:paddingLeft="40dp"
+            android:paddingLeft="15dp"
             android:paddingRight="5dp"
             android:layout_centerInParent="true"
             android:layout_marginTop="40dp"
             android:hint="搜索"
             android:textColor="@color/TittleColor"
             android:textSize="@dimen/TextTextSize"
-            android:background="@drawable/icon_search_push"/>
+            android:drawableLeft="@drawable/search"
+            android:background="@drawable/icon_search_push2"
+            />
     </RelativeLayout>
 
     <ListView
